--- a/src/component/feed/feed.css
+++ b/src/component/feed/feed.css
@@ -1,3 +1,22 @@
 .feed {
   flex: 5.5;
+  height: calc(100vh - 50px);
+  overflow-y: scroll;
+}
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: rgb(199, 198, 198);
+  border-radius: 5px;
+}
+
+.feedWrapper {
+  padding: 20px;
 }
