--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -67,6 +67,11 @@
   font-weight: 800;
   color: white;
   cursor: pointer;
+  outline: none;
+}
+
+.loginRightLoginButton:disabled {
+  cursor: not-allowed;
 }
 
 .loginRightForgot {
