--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,10 @@
 * {
+  padding: 0;
   margin: 0;
   font-family: "Roboto", sans-serif;
+}
+
+.link {
+  text-decoration: none;
+  color: inherit;
 }
