--- a/src/component/post/post.css
+++ b/src/component/post/post.css
@@ -19,6 +19,33 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  position: relative;
+}
+
+.postEditing {
+  display: flex;
+  flex-direction: column;
+  background-color: white;
+  box-shadow: 0px 0px 21px 0px rgba(0, 0, 0, 0.55);
+  -webkit-box-shadow: 0px 0px 21px 0px rgba(0, 0, 0, 0.55);
+  -moz-box-shadow: 0px 0px 21px 0px rgba(0, 0, 0, 0.55);
+  position: absolute;
+  top: 40px;
+  right: 0;
+  border-radius: 5px;
+}
+
+.postEditingLine {
+  height: 0.5px;
+  color: gray;
+  margin: 0 2px;
+}
+
+.postDeletion,
+.postUpdation {
+  padding: 5px;
+  font-size: 18px;
+  cursor: pointer;
 }
 
 .postTopMessage {
