--- a/src/component/righrbar/rightbar.css
+++ b/src/component/righrbar/rightbar.css
@@ -92,3 +92,18 @@
 .followingFriendName {
   text-align: center;
 }
+
+.rightbarFollow {
+  margin-top: 30px;
+  margin-bottom: 10px;
+  border: none;
+  background-color: #1872f2;
+  color: white;
+  padding: 8px;
+  border-radius: 10px;
+  font-size: 18px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  cursor: pointer;
+}
